--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- NAV BAR -->
     <div class="nav-bar grid">
         <div class="grid__row">
-            <div class="nav-bar-container col-lg-1">
+            <div class="nav-bar-container col-lg-12">
                 <div class="options">
                     <div class="nav-item-lv1 all-clothes">ALL CLOTHES</div>
                     <div class="nav-item-lv1 tops">
@@ -94,11 +94,60 @@
     <div class="products">
         <H2 class="products-heading">NEW ARRIVAL</H2>
         <div class="products-list">
-            <i class="btn products-prev fas fa-chevron-left"></i>
+            <i class="btn btn-prev fas fa-chevron-left"></i>
 
-            <i class="btn products-next fas fa-chevron-right"></i>
+            <i class="btn btn-next fas fa-chevron-right"></i>
         </div>
         
     </div>
+
+    <!-- CATEGORY -->
+    <div class="category">
+        <h3 class="category-heading">CATEGORY</h3>
+        <div class="grid">
+            <ul class="list grid__row">
+                <a class="item col-lg-2"><img src="./assets/img/brand1.png" alt=""></a>
+                <a class="item col-lg-2"><img src="./assets/img/brand2.png" alt=""></a>
+                <a class="item col-lg-2"><img src="./assets/img/brand3.png" alt=""></a>
+                <a class="item col-lg-2"><img src="./assets/img/brand4.png" alt=""></a>
+                <a class="item col-lg-2"><img src="./assets/img/brand5.png" alt=""></a>
+                <a class="item col-lg-2"><img src="./assets/img/brand7.png" alt=""></a>
+            </ul>
+        </div>
+    </div>
+
+    <!-- FOOTER -->
+    <footer class="grid">
+        <div class="grid__row">
+            <div class="col-lg-2-4">
+                <div class="footer-heading">Sản phẩm</div>
+                <div class="footer-list">
+                    <a href="" class="footer-item">ALL CLOTHES</a>
+                    <a href="" class="footer-item">TOPS</a>
+                    <a href="" class="footer-item">BOTTOMS</a>
+                    <a href="" class="footer-item">OUTERWEAR</a>
+                    <a href="" class="footer-item">ACCESSORIES</a>
+                    <a href="" class="footer-item">HOT DEAL</a>
+                </div>
+                
+            </div>
+            <div class="col-lg-2-4">
+                <div class="footer-heading">Về chúng tôi</div>
+
+            </div>
+            <div class="col-lg-2-4">
+                <div class="footer-heading">Hướng dẫn</div>
+
+            </div>
+            <div class="col-lg-2-4">
+                <div class="footer-heading">Chính sách</div>
+
+            </div>
+            <div class="col-lg-2-4">
+                <div class="footer-heading">Theo dõi chúng thôi</div>
+
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
