done main screen

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="icon" href="./assets/img/web-icon.png">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/default.css">
-    <!-- <link rel="stylesheet" href="./slider.css"> -->
 </head>
 <body>
     <!-- LOGO -->
@@ -93,118 +92,134 @@
     <!-- New arrival -->
     <div class="products">
         <h1 class="products-heading">NEW ARRIVAL</h1>
-        <div class="products-list">
-            <div class="check">
-                <div class="container">
-                    <div class="slide">
-                        <div class="image product" alt="">
-                            <img class="item-img" src="./assets/img/new-arrival/myoxdeath_t-shirt.jpg" alt="">
-                            <p class="product-name">MyoXDeath T-Shirt</p>
+        <div class="check products-list">
+            <div class="container">
+                <div class="product-slide">
+                    <div class="product-overlay"></div>
+                    <div class="product-item" alt="">
+                        <div class="product-overlay"></div>
+                        <img class="item-img" src="./assets/img/new-arrival/myoxdeath_t-shirt.jpg" alt="">
+                        <div class="list-item-detail">
+                            <p class="list-item-name">MyoXDeath T-Shirt</p>
+                            <span class="list-item-price">390.000 &#8363;</span>
                         </div>
-                        <div class="image product" alt="">
-                            <img class="item-img" src="./assets/img/new-arrival/e-butterfly_polo.jpg" alt="">
-                            <div class="list-item-detail">
-                                <p class="list-item-name">Áo E-Butterfly Polo</p>
-                                <span class="list-item-price">270.000 &#8363;</span>
-                            </div>
-                        </div>
-                        <div class="image product" alt="">
-                            <img class="item-img" src="./assets/img/new-arrival/v-money-wash_short.jpg" alt="">
-                            <div class="list-item-detail">
-                                <p class="list-item-name">Quần Short V Money Wash</p>
-                                <span class="list-item-price">260.000 &#8363;</span>
-                            </div>
-                        </div>
-                        <div class="image product" alt="" id="lastClone">
-                            <img class="item-img" src="./assets/img/new-arrival/sleeve-smile_long-tee.jpg" alt="">
-                            <div class="list-item-detail">
-                                <p class="list-item-name">Áo Long Sleeve Tee Smile</p>
-                                <span class="list-item-price">310.000 &#8363;</span>
-                            </div>
-                        </div>
-                        <div class="image product" alt="">
-                            <img class="item-img" src="./assets/img/new-arrival/since-2016_hoodie.jpg" alt="">
-                            <div class="list-item-detail">
-                                <p class="list-item-name">Áo Hoodie SINCE 2016</p>
-                                <span class="list-item-price">330.000 &#8363;</span>
-                            </div>
-                        </div>
-                        <div class="image product" alt="">
-                            <img class="item-img" src="./assets/img/new-arrival/myoxdeath_hoodie.jpg" alt="">
-                            <div class="list-item-detail">
-                                <p class="list-item-name">MYOXDEATH Hoodie</p>
-                                <span class="list-item-price">450.000 &#8363;</span>
-                            </div>
-                        </div>
-                        <div class="image product" alt="">
-                            <img class="item-img" src="./assets/img/new-arrival/myoxdeath_polo.jpg" alt="">
-                            <div class="list-item-detail">
-                                <p class="list-item-name">MYOXDEATH Polo</p>
-                                <span class="list-item-price">390.000 &#8363;</span>
-                            </div>
-                        </div>
-                        <div class="image product" alt="">
-                            <img class="item-img" src="./assets/img/new-arrival/myoxdeath_t-shirt.jpg" alt="">
-                            <div class="list-item-detail">
-                                <p class="list-item-name">MyoXDeath T-Shirt</p>
-                                <span class="list-item-price">390.000 &#8363;</span>
-                            </div>
-                        </div>
-                        <div class="image product" alt="">
-                            <img class="item-img" src="./assets/img/new-arrival/e-butterfly_polo.jpg" alt="">
-                            <div class="list-item-detail">
-                                <p class="list-item-name">Áo E-Butterfly Polo</p>
-                                <span class="list-item-price">270.000 &#8363;</span>
-                            </div>
-                        </div>
-                        <div class="image product" alt="">
-                            <img class="item-img" src="./assets/img/new-arrival/v-money-wash_short.jpg" alt="">
-                            <div class="list-item-detail">
-                                <p class="list-item-name">Quần Short V Money Wash</p>
-                                <span class="list-item-price">260.000 &#8363;</span>
-                            </div>
-                        </div>
-                        <div class="image product">
-                            <img class="item-img" src="./assets/img/new-arrival/sleeve-smile_long-tee.jpg" alt="">
-                            <div class="list-item-detail">
-                                <p class="list-item-name">Áo Long Sleeve Tee Smile</p>
-                                <span class="list-item-price">310.000 &#8363;</span>
-                            </div>
-                        </div>
-                        <div class="image product" alt="" id="firstClone">
-                            <img class="item-img" src="./assets/img/new-arrival/since-2016_hoodie.jpg" alt="">
-                            <div class="list-item-detail">
-                                <p class="list-item-name">Áo Hoodie SINCE 2016</p>
-                                <span class="list-item-price">330.000 &#8363;</span>
-                            </div>
-                        </div>
-                        <div class="image product" alt="">
-                            <img class="item-img" src="./assets/img/new-arrival/myoxdeath_hoodie.jpg" alt="">
-                            <div class="list-item-detail">
-                                <p class="list-item-name">MYOXDEATH Hoodie</p>
-                                <span class="list-item-price">450.000 &#8363;</span>
-                            </div>
-                        </div>
-                        <div class="image product" alt="">
-                            <img class="item-img" src="./assets/img/new-arrival/myoxdeath_polo.jpg" alt="">
-                            <div class="list-item-detail">
-                                <p class="list-item-name">MYOXDEATH Polo</p>
-                                <span class="list-item-price">390.000 &#8363;</span>
-                            </div>
-                        </div>
-                        <div class="image product" alt="">
-                            <img class="item-img" src="./assets/img/new-arrival/myoxdeath_t-shirt.jpg" alt="">
-                            <div class="list-item-detail">
-                                <p class="list-item-name">MyoXDeath T-Shirt</p>
-                                <span class="list-item-price">390.000 &#8363;</span>
-                            </div>
-                        </div>  
                     </div>
-                </div>   
-
-                <button id="prevBtn"><i class="btn fas fa-chevron-left"></i></button>
-                <button id="nextBtn"><i class="btn fas fa-chevron-right"></i></button>
-            </div>    
+                    <div class="product-item" alt="">
+                        <div class="product-overlay"></div>
+                        <img class="item-img" src="./assets/img/new-arrival/e-butterfly_polo.jpg" alt="">
+                        <div class="list-item-detail">
+                            <p class="list-item-name">Áo E-Butterfly Polo</p>
+                            <span class="list-item-price">270.000 &#8363;</span>
+                        </div>
+                    </div>
+                    <div class="product-item" alt="">
+                        <div class="product-overlay"></div>
+                        <img class="item-img" src="./assets/img/new-arrival/v-money-wash_short.jpg" alt="">
+                        <div class="list-item-detail">
+                            <p class="list-item-name">Quần Short V Money Wash</p>
+                            <span class="list-item-price">260.000 &#8363;</span>
+                        </div>
+                    </div>
+                    <div class="product-item" alt="" id="lastClone">
+                        <div class="product-overlay"></div>
+                        <img class="item-img" src="./assets/img/new-arrival/sleeve-smile_long-tee.jpg" alt="">
+                        <div class="list-item-detail">
+                            <p class="list-item-name">Áo Long Sleeve Tee Smile</p>
+                            <span class="list-item-price">310.000 &#8363;</span>
+                        </div>
+                    </div>
+                    <div class="product-item" alt="">
+                        <div class="product-overlay"></div>
+                        <img class="item-img" src="./assets/img/new-arrival/since-2016_hoodie.jpg" alt="">
+                        <div class="list-item-detail">
+                            <p class="list-item-name">Áo Hoodie SINCE 2016</p>
+                            <span class="list-item-price">330.000 &#8363;</span>
+                        </div>
+                    </div>
+                    <div class="product-item" alt="">
+                        <div class="product-overlay"></div>
+                        <img class="item-img" src="./assets/img/new-arrival/myoxdeath_hoodie.jpg" alt="">
+                        <div class="list-item-detail">
+                            <p class="list-item-name">MYOXDEATH Hoodie</p>
+                            <span class="list-item-price">450.000 &#8363;</span>
+                        </div>
+                    </div>
+                    <div class="product-item" alt="">
+                        <div class="product-overlay"></div>
+                        <img class="item-img" src="./assets/img/new-arrival/myoxdeath_polo.jpg" alt="">
+                        <div class="list-item-detail">
+                            <p class="list-item-name">MYOXDEATH Polo</p>
+                            <span class="list-item-price">390.000 &#8363;</span>
+                        </div>
+                    </div>
+                    <div class="product-item" alt="">
+                        <div class="product-overlay"></div>
+                        <img class="item-img" src="./assets/img/new-arrival/myoxdeath_t-shirt.jpg" alt="">
+                        <div class="list-item-detail">
+                            <p class="list-item-name">MyoXDeath T-Shirt</p>
+                            <span class="list-item-price">390.000 &#8363;</span>
+                        </div>
+                    </div>
+                    <div class="product-item" alt="">
+                        <div class="product-overlay"></div>
+                        <img class="item-img" src="./assets/img/new-arrival/e-butterfly_polo.jpg" alt="">
+                        <div class="list-item-detail">
+                            <p class="list-item-name">Áo E-Butterfly Polo</p>
+                            <span class="list-item-price">270.000 &#8363;</span>
+                        </div>
+                    </div>
+                    <div class="product-item" alt="">
+                        <div class="product-overlay"></div>
+                        <img class="item-img" src="./assets/img/new-arrival/v-money-wash_short.jpg" alt="">
+                        <div class="list-item-detail">
+                            <p class="list-item-name">Quần Short V Money Wash</p>
+                            <span class="list-item-price">260.000 &#8363;</span>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <div class="product-overlay"></div>
+                        <img class="item-img" src="./assets/img/new-arrival/sleeve-smile_long-tee.jpg" alt="">
+                        <div class="list-item-detail">
+                            <p class="list-item-name">Áo Long Sleeve Tee Smile</p>
+                            <span class="list-item-price">310.000 &#8363;</span>
+                        </div>
+                    </div>
+                    <div class="product-item" alt="" id="firstClone">
+                        <div class="product-overlay"></div>
+                        <img class="item-img" src="./assets/img/new-arrival/since-2016_hoodie.jpg" alt="">
+                        <div class="list-item-detail">
+                            <p class="list-item-name">Áo Hoodie SINCE 2016</p>
+                            <span class="list-item-price">330.000 &#8363;</span>
+                        </div>
+                    </div>
+                    <div class="product-item" alt="">
+                        <div class="product-overlay"></div>
+                        <img class="item-img" src="./assets/img/new-arrival/myoxdeath_hoodie.jpg" alt="">
+                        <div class="list-item-detail">
+                            <p class="list-item-name">MYOXDEATH Hoodie</p>
+                            <span class="list-item-price">450.000 &#8363;</span>
+                        </div>
+                    </div>
+                    <div class="product-item" alt="">
+                        <div class="product-overlay"></div>
+                        <img class="item-img" src="./assets/img/new-arrival/myoxdeath_polo.jpg" alt="">
+                        <div class="list-item-detail">
+                            <p class="list-item-name">MYOXDEATH Polo</p>
+                            <span class="list-item-price">390.000 &#8363;</span>
+                        </div>
+                    </div>
+                    <div class="product-item" alt="">
+                        <div class="product-overlay"></div>
+                        <img class="item-img" src="./assets/img/new-arrival/myoxdeath_t-shirt.jpg" alt="">
+                        <div class="list-item-detail">
+                            <p class="list-item-name">MyoXDeath T-Shirt</p>
+                            <span class="list-item-price">390.000 &#8363;</span>
+                        </div>
+                    </div>  
+                </div>  
+            </div>
+            <button id="prevBtn"><i class="btn fas fa-chevron-left"></i></button>
+            <button id="nextBtn"><i class="btn fas fa-chevron-right"></i></button>
         </div>
     </div>
 
