--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MYO | MAKE YOURSELF ORIGINAL</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/347a919724.js" crossorigin="anonymous"></script>
@@ -21,10 +20,11 @@
     </div>
 
     <!-- NAV BAR -->
-    <div class="nav-bar grid">
+    <div id="nav-bar" class="nav-bar grid">
         <div class="grid__row">
-            <div class="nav-bar-container col-lg-12">
-                <div class="options">
+            <div class="nav-bar-container col-lg-12 col-sm-12">
+                <button id="bars" class="bars"><i class="fas fa-bars"></i></button>
+                <div id="options" class="options close">
                     <div class="nav-item-lv1 all-clothes">ALL CLOTHES</div>
                     <div class="nav-item-lv1 tops">
                         TOPS
@@ -70,18 +70,21 @@
                     </div>
                 </div>
 
-                <div class="search">
-                    <i class="fas fa-search"></i>
-                    <div class="search-option">
-                        <input type="text" class="search-input" placeholder="Tìm kiếm sản phẩm...">
+                <div class="extend">
+                    <div class="search">
                         <i class="fas fa-search"></i>
+                        <div class="search-option">
+                            <input type="text" class="search-input" placeholder="Tìm kiếm sản phẩm...">
+                            <i class="fas fa-search"></i>
+                        </div>
                     </div>
-                </div>
+    
+                    <div class="cart">
+                        <i class="fas fa-shopping-bag"></i>
+                        <div class="quantity">0</div>
+                        <div class="cart-list">Không có sản phẩm nào.</div>
+                    </div>
 
-                <div class="cart">
-                    <i class="fas fa-shopping-bag"></i>
-                    <div class="quantity">0</div>
-                    <div class="cart-list">Không có sản phẩm nào.</div>
                 </div>
             </div>
 
@@ -91,7 +94,7 @@
     <!-- CONTAINER -->
 
     <!-- New arrival -->
-    <div class="products">
+    <div id="new-arrival" class="products">
         <H2 class="products-heading">NEW ARRIVAL</H2>
         <div class="products-list">
             <i class="btn btn-prev fas fa-chevron-left"></i>
@@ -149,5 +152,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="./assets/js/bars.js"></script>
 </body>
 </html>
